--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
+   "scripts": {
+      "start": "node public/index.js"
+   },
   "dependencies": {
+   
     "cookie": "^0.5.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
